feat: Swagger 도입 및 그룹/일정/친구 기능 보완
- Swagger(OpenAPI 3) 라이브러리 추가 및 설정 클래스 구현
- GroupController 의존성 주입 오류 수정 및 API 보완
- 일정(Schedule) 및 친구(Friend) 도메인 관련 파일 추가
- JWT 인증 필터 및 보안 설정 업데이트 (Swagger 경로 허용)
- Entity 및 Repository 로직 보완